# AoC2023

./: .gitignore  CMakeLists.txt  output.txt
Day1/: CMakeLists.txt
Day1/lib/: CMakeLists.txt
Day1/lib/include/aoc/day1/: day1.h
Day1/lib/src/: day1.cpp
Day1/part1/: CMakeLists.txt
Day1/part1/src/: main.cpp
Day1/part2/: CMakeLists.txt
Day1/part2/src/: main.cpp
Day1/test/: CMakeLists.txt
Day1/test/src/: main.cpp
Day10/: part1.py  part2.py
Day11/: part1.py  part2.py
Day12/: day12.py  diff.txt  output.txt  part1.py  part2.py  rightOutput.txt  wrongOutput.txt
Day12/c++/: CMakeLists.txt  extraInput.txt  output.txt  rightOutput.txt  temp.py  temp.txt  temp2.txt  triedSolutions.txt  wrongOutput.txt
Day12/c++/src/: main.cpp
Day13/: part1.py  part2.py
Day14/: output.txt  part1.py  part2.py
Day15/: part1.py  part2.py
Day16/: part1.py  part2.py
Day17/: output.txt  part1.py
Day19/: CMakeLists.txt
Day19/src/: main.cpp  main2.cpp
Day2/: day1.py
Day20/: part1.py  part2.py
Day21/: part2.py
Day22/: part1.py  part2.py
Day23/: part1.py  part2.py
Day24/: part1.py
Day4/: CMakeLists.txt
Day4/include/aoc/day4/: day4.h
Day4/src/aoc/day4/: day4.cpp
Day4/src/aoc/day4/part1/: main.cpp
Day4/src/aoc/day4/part2/: main.cpp
Day5/: .gitignore  CMakeLists.txt  conanfile.py
Day5/include/aoc/day5/: day5.h
Day5/part1/: CMakeLists.txt
Day5/part1/src/: main.cpp
Day5/part2/: CMakeLists.txt
Day5/part2/src/: main.cpp
Day5/src/aoc/day5/: day5.cpp
Day5/test/: CMakeLists.txt
Day5/test/src/: main.cpp
Day6/: part1.py  part2.py
Day7/: part1.py  part2.py
Day8/: part1.py  part2.py
Day9/: part1.py  part2.py
conan/: conanfile.py
lib/: CMakeLists.txt
lib/include/aoc/: aoc.h
lib/src/: aoc.cpp
lib/template/include/aoc/: res.h.in
